--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,25 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/activity_bg_color"
-        tools:context=".HomeActivity">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:app="http://schemas.android.com/apk/res-auto"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:orientation="vertical"
+              android:clipChildren="false">
 
-
-    <View
-            android:layout_width="5dp"
-            android:layout_height="1dp"
-            android:background="#d2d2d2"
-            android:id="@+id/view"
-            app:layout_constraintBottom_toBottomOf="@+id/btnClick"
-            app:layout_constraintTop_toTopOf="@+id/btnClick" app:layout_constraintEnd_toEndOf="@+id/btnClick"
-            app:layout_constraintStart_toStartOf="@+id/btnClick"/>
-
-
-    <android.support.design.widget.FloatingActionButton
+    <ImageButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:clickable="true"
@@ -29,10 +16,128 @@
             android:id="@+id/btnClick"
             app:backgroundTint="#ffffff"
             android:layout_marginTop="8dp"
-            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
-            app:layout_constraintStart_toStartOf="parent" app:layout_constraintVertical_bias="0.012"
-            app:layout_constraintHorizontal_bias="0.0"/>
+            android:layout_marginLeft="8dp"/>
+    <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="38dp"
+            android:layout_marginTop="30dp">
 
-</android.support.constraint.ConstraintLayout>
+        <FrameLayout
+                android:id="@+id/countries"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_centerVertical="true"
+                android:layout_alignParentStart="true"
+                android:layout_toStartOf="@+id/frameLayout">
+
+            <TextView
+                    android:id="@+id/tv_country_1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:textSize="28sp"
+                    android:textStyle="bold"/>
+
+            <TextView
+                    android:id="@+id/tv_country_2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="28sp"
+                    android:textStyle="bold"
+                    android:layout_gravity="center_vertical"/>
+
+        </FrameLayout>
+
+        <FrameLayout
+                android:layout_width="85dp"
+                android:layout_height="match_parent"
+                android:layout_alignParentEnd="true"
+                android:background="@drawable/temperature_background"
+                android:layout_centerVertical="true"
+                android:id="@+id/frameLayout">
+
+            <TextSwitcher
+                    android:id="@+id/ts_temperature"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"/>
+
+        </FrameLayout>
+
+    </RelativeLayout>
+
+    <android.support.v7.widget.RecyclerView
+            android:id="@+id/recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="210dp"
+            android:layout_marginTop="18dp"
+            android:layout_marginStart="@dimen/recycler_view_left_offset"
+            android:clipChildren="false"
+            android:overScrollMode="never"
+            app:layoutManager="door.cyron.house.housedoor.cardSlider.motion.CardSliderLayoutManager"
+    />
+
+    <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp">
+
+        <ImageView
+                android:layout_width="13dp"
+                android:layout_height="13dp"
+                android:layout_gravity="center_vertical"
+                android:layout_marginStart="30dp"
+                android:src="@drawable/star"
+                android:scaleType="fitCenter"/>
+
+        <TextSwitcher
+                android:id="@+id/ts_place"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_marginStart="@dimen/left_offset"/>
+
+    </FrameLayout>
+
+    <RelativeLayout
+            android:layout_marginTop="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:animateLayoutChanges="true">
+
+
+        <TextSwitcher
+                android:id="@+id/ts_description"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/left_offset"
+                android:layout_marginEnd="10dp"/>
+
+        <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_below="@id/ts_description">
+
+            <ImageView
+                    android:layout_width="13dp"
+                    android:layout_height="13dp"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginStart="30dp"
+                    android:src="@drawable/clock"
+                    android:scaleType="fitCenter"/>
+
+            <TextSwitcher
+                    android:id="@+id/ts_clock"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginStart="@dimen/left_offset"/>
+
+        </FrameLayout>
+
+
+    </RelativeLayout>
+
+
+</LinearLayout>
