--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -74,7 +74,7 @@
             android:layout_marginStart="@dimen/recycler_view_left_offset"
             android:clipChildren="false"
             android:overScrollMode="never"
-            app:layoutManager="door.cyron.house.housedoor.cardSlider.motion.CardSliderLayoutManager"
+            app:layoutManager="door.cyron.house.housedoor.home.cardSlider.CardSliderLayoutManager"
     />
 
     <FrameLayout
