--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,4 +18,7 @@
     <color name="green_dot_big">@color/blue</color>
     <color name="green_dot_small">@color/blue</color>
 
+    <color name="black_transparent">#14000000</color>
+
+
 </resources>
