Drawer house list added

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -175,27 +175,13 @@
 
     </LinearLayout>
 
-    <LinearLayout
+    <android.support.v7.widget.RecyclerView
+            android:id="@+id/left_drawer"
             android:layout_width="match_parent"
-            android:layout_gravity="start|center_vertical"
-            android:orientation="vertical"
-            android:gravity="center_vertical"
-            android:layout_height="wrap_content">
-        <Button
-                android:layout_width="match_parent"
-                android:layout_height="90dp"
-                android:background="@drawable/shape_rounded"/>
-        <android.support.v7.widget.RecyclerView
-                android:id="@+id/left_drawer"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:scrollbars="none"
-                android:background="@android:color/white"
-                android:choiceMode="singleChoice"
-                android:divider="@android:color/transparent"/>
-        <Button
-                android:layout_width="match_parent"
-                android:layout_height="90dp"
-                android:background="@drawable/shape_rounded"/>
-    </LinearLayout>
+            android:layout_height="match_parent"
+            android:layout_gravity="start"
+            android:scrollbars="none"
+            android:background="@android:color/white"
+            android:choiceMode="singleChoice"
+            android:divider="@android:color/transparent"/>
 </android.support.v4.widget.DrawerLayout>
