--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -73,10 +73,20 @@
             android:layout_marginTop="25dp"/>
 
 
+
+    <ImageView
+            android:id="@+id/imageDropdown"
+            android:layout_width="wrap_content"
+            android:padding="5dp"
+            android:layout_height="wrap_content"
+            android:src="@drawable/down_arrow_date"
+            android:layout_alignTop="@+id/txtName"
+            android:layout_alignRight="@+id/imageViewThree"
+            android:layout_alignEnd="@+id/imageViewThree" />
     <ImageView
             android:layout_width="match_parent"
             android:layout_alignParentBottom="true"
             android:background="@android:color/white"
-            android:layout_height="7dp"/>
+            android:layout_height="7dp" />
 
 </RelativeLayout>
