--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,170 +1,213 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:clipChildren="false">
-
-    <ImageButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:clickable="true"
-            android:transitionName="demo"
-            android:src="@android:drawable/ic_menu_sort_by_size"
-            android:tint="#000000"
-            android:id="@+id/btnClick"
-            app:backgroundTint="@android:color/transparent"
-            android:layout_marginTop="8dp"
-            android:layout_marginLeft="8dp"/>
-    <RelativeLayout
+        xmlns:tools="http://schemas.android.com/tools"
+        tools:context=".home.HomeActivity">
+    <data>
+        <import type="android.view.View"></import>
+        <variable name="viewModel" type="door.cyron.house.housedoor.home.viewmodel.HomeViewModel"></variable>
+    </data>
+    <android.support.design.widget.CoordinatorLayout
             android:layout_width="match_parent"
-            android:layout_height="38dp"
-            android:layout_marginTop="30dp">
+            android:layout_height="match_parent">
 
-        <FrameLayout
-                android:id="@+id/countries"
+        <android.support.design.widget.AppBarLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+            <android.support.design.widget.CollapsingToolbarLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:layout_scrollFlags="scroll|exitUntilCollapsed"
+                    android:fitsSystemWindows="true"
+                    app:contentScrim="?attr/colorPrimary"
+                    app:titleEnabled="false">
+
+                <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="vertical"
+                        app:layout_collapseMode="parallax"
+                        android:background="@color/activity_bg_color"
+                        android:clipChildren="false">
+
+                    <RelativeLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="38dp"
+                            android:layout_marginTop="30dp">
+
+                        <FrameLayout
+                                android:id="@+id/countries"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:layout_centerVertical="true"
+                                android:layout_alignParentStart="true"
+                                android:layout_toStartOf="@+id/frameLayout">
+
+                            <TextView
+                                    android:id="@+id/tv_country_1"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_gravity="center_vertical"
+                                    android:textSize="28sp"
+                                    android:textStyle="bold"/>
+
+                            <TextView
+                                    android:id="@+id/tv_country_2"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:textSize="28sp"
+                                    android:textStyle="bold"
+                                    android:layout_gravity="center_vertical"/>
+
+                        </FrameLayout>
+
+                        <FrameLayout
+                                android:layout_width="85dp"
+                                android:layout_height="match_parent"
+                                android:layout_alignParentEnd="true"
+                                android:background="@drawable/temperature_background"
+                                android:layout_centerVertical="true"
+                                android:id="@+id/frameLayout">
+
+                            <TextSwitcher
+                                    android:id="@+id/ts_temperature"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_gravity="center"/>
+
+                        </FrameLayout>
+
+                    </RelativeLayout>
+
+                    <android.support.v7.widget.RecyclerView
+                            android:id="@+id/recycler_view"
+                            android:layout_width="match_parent"
+                            android:layout_height="210dp"
+                            android:layout_marginTop="18dp"
+                            android:layout_marginStart="@dimen/recycler_view_left_offset"
+                            android:clipChildren="false"
+                            android:overScrollMode="never"
+                            app:layoutManager="door.cyron.house.housedoor.home.view.cardSlider.CardSliderLayoutManager"
+                    />
+
+                    <FrameLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="15dp">
+
+                        <ImageView
+                                android:layout_width="13dp"
+                                android:layout_height="13dp"
+                                android:layout_gravity="center_vertical"
+                                android:layout_marginStart="30dp"
+                                android:src="@drawable/star"
+                                android:scaleType="fitCenter"/>
+
+                        <TextSwitcher
+                                android:id="@+id/ts_place"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center_vertical"
+                                android:layout_marginStart="@dimen/left_offset"/>
+
+                    </FrameLayout>
+
+                    <RelativeLayout
+                            android:layout_marginTop="10dp"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:animateLayoutChanges="true">
+
+
+                        <TextSwitcher
+                                android:id="@+id/ts_description"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginStart="@dimen/left_offset"
+                                android:layout_marginEnd="10dp"/>
+
+                        <FrameLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="10dp"
+                                android:layout_below="@id/ts_description">
+
+                            <ImageView
+                                    android:layout_width="13dp"
+                                    android:layout_height="13dp"
+                                    android:layout_gravity="center_vertical"
+                                    android:layout_marginStart="30dp"
+                                    android:src="@drawable/clock"
+                                    android:scaleType="fitCenter"/>
+
+                            <TextSwitcher
+                                    android:id="@+id/ts_clock"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_gravity="center_vertical"
+                                    android:layout_marginStart="@dimen/left_offset"/>
+
+                        </FrameLayout>
+
+
+                    </RelativeLayout>
+
+                    <door.cyron.house.housedoor.custom.SwipeButton
+                            android:id="@+id/swipeNoState"
+                            android:layout_width="match_parent"
+                            android:layout_height="50dp"
+                            app:button_trail_enabled="true"
+                            android:gravity="center"
+                            android:layout_gravity="center"
+                            app:button_image_disabled="@android:drawable/ic_partial_secure"
+                            app:button_image_enabled="@android:drawable/ic_lock_idle_lock"
+                            app:button_background="@drawable/shape_button_squared"
+                            app:button_bottom_padding="18dp"
+                            app:button_left_padding="18dp"
+                            app:button_right_padding="18dp"
+                            app:button_top_padding="18dp"
+                            app:initial_state="disabled"
+                            app:inner_text="SWIPE 2 TURN ON"
+                            app:inner_text_background="@drawable/shape_squared"
+                            app:inner_text_color="@android:color/white"
+                            app:inner_text_size="11sp"
+                            app:inner_text_top_padding="18dp"
+                            app:inner_text_bottom_padding="18dp"
+                            app:has_activate_state="true"
+                            android:layout_marginTop="20dp"
+                            android:layout_marginLeft="20dp"
+                            android:layout_marginRight="20dp"/>
+
+                </LinearLayout>
+
+                <android.support.v7.widget.Toolbar
+                        android:id="@+id/toolbar"
+                        android:layout_width="match_parent"
+                        android:layout_height="?attr/actionBarSize"
+                        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+                        app:layout_collapseMode="pin"
+                />
+            </android.support.design.widget.CollapsingToolbarLayout>
+
+        </android.support.design.widget.AppBarLayout>
+
+        <android.support.v7.widget.RecyclerView
+                android:id="@+id/recycler_view_switch"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_centerVertical="true"
-                android:layout_alignParentStart="true"
-                android:layout_toStartOf="@+id/frameLayout">
-
-            <TextView
-                    android:id="@+id/tv_country_1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:textSize="28sp"
-                    android:textStyle="bold"/>
-
-            <TextView
-                    android:id="@+id/tv_country_2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="28sp"
-                    android:textStyle="bold"
-                    android:layout_gravity="center_vertical"/>
-
-        </FrameLayout>
-
-        <FrameLayout
-                android:layout_width="85dp"
-                android:layout_height="match_parent"
-                android:layout_alignParentEnd="true"
-                android:background="@drawable/temperature_background"
-                android:layout_centerVertical="true"
-                android:id="@+id/frameLayout">
-
-            <TextSwitcher
-                    android:id="@+id/ts_temperature"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"/>
-
-        </FrameLayout>
-
-    </RelativeLayout>
-
-    <android.support.v7.widget.RecyclerView
-            android:id="@+id/recycler_view"
-            android:layout_width="match_parent"
-            android:layout_height="210dp"
-            android:layout_marginTop="18dp"
-            android:layout_marginStart="@dimen/recycler_view_left_offset"
-            android:clipChildren="false"
-            android:overScrollMode="never"
-            app:layoutManager=".home.view.cardSlider.CardSliderLayoutManager"
-    />
-
-    <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="15dp">
-
-        <ImageView
-                android:layout_width="13dp"
-                android:layout_height="13dp"
-                android:layout_gravity="center_vertical"
-                android:layout_marginStart="30dp"
-                android:src="@drawable/star"
-                android:scaleType="fitCenter"/>
-
-        <TextSwitcher
-                android:id="@+id/ts_place"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_marginStart="@dimen/left_offset"/>
-
-    </FrameLayout>
-
-    <RelativeLayout
-            android:layout_marginTop="10dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:animateLayoutChanges="true">
-
-
-        <TextSwitcher
-                android:id="@+id/ts_description"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/left_offset"
-                android:layout_marginEnd="10dp"/>
-
-        <FrameLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:layout_below="@id/ts_description">
-
-            <ImageView
-                    android:layout_width="13dp"
-                    android:layout_height="13dp"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginStart="30dp"
-                    android:src="@drawable/clock"
-                    android:scaleType="fitCenter"/>
-
-            <TextSwitcher
-                    android:id="@+id/ts_clock"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginStart="@dimen/left_offset"/>
-
-        </FrameLayout>
-
-
-    </RelativeLayout>
-    <door.cyron.house.housedoor.custom.SwipeButton
-            android:id="@+id/swipeNoState"
-            android:layout_width="250dp"
-            android:layout_height="50dp"
-            app:button_trail_enabled="true"
-            android:gravity="center"
-            android:layout_gravity="center"
-            app:button_image_disabled="@android:drawable/ic_partial_secure"
-            app:button_image_enabled="@android:drawable/ic_lock_idle_lock"
-            app:button_background="@drawable/shape_button_squared"
-            app:button_bottom_padding="18dp"
-            app:button_left_padding="18dp"
-            app:button_right_padding="18dp"
-            app:button_top_padding="18dp"
-            app:initial_state="disabled"
-            app:inner_text="SWIPE 2 TURN ON"
-            app:inner_text_background="@drawable/shape_squared"
-            app:inner_text_color="@android:color/white"
-            app:inner_text_size="11sp"
-            app:inner_text_top_padding="18dp"
-            app:inner_text_bottom_padding="18dp"
-            app:has_activate_state="true"
-            android:layout_marginTop="20dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"/>
-
-
-</LinearLayout>
+                android:layout_marginTop="18dp"
+                android:background="@color/activity_bg_color"
+                android:nestedScrollingEnabled="true"
+                app:layout_behavior="@string/appbar_scrolling_view_behavior"
+                app:spanCount="2"
+                app:layoutManager="android.support.v7.widget.GridLayoutManager"
+        />
+        <include
+                layout="@layout/layout_connection_error"
+                android:visibility="@{viewModel.retry?View.VISIBLE:View.GONE}"
+                app:retryListener="@{viewModel.onRetryClick}"
+                tools:visibility="gone"></include>
+    </android.support.design.widget.CoordinatorLayout>
+</layout>
 
